# hgg-verba

./: .coverage  .dockerignore  .env.example  .gitignore  .shellcheckrc  AGENTS.md  ASTRAL_TOOLING_MIGRATION_GUIDE.md  BACKEND_SECURITY_AUDIT.md  CLAUDE.md  CODEBASE_REVIEW.md  CONTRIBUTING.md  Dockerfile  LOCAL_DEPLOYMENT.md  MANUAL_TEST_EMBEDDER.md  MIGRATION_GUIDE.md  Makefile  POSTGRESQL_MIGRATION.md  RAILWAY_CLEANUP_SUMMARY.md  RAILWAY_DEPLOYMENT_ANALYSIS.md  RAILWAY_DEPLOYMENT_GUIDE.md  RAILWAY_POSTGRESQL_SUCCESS.md  RAILWAY_WEAVIATE_CONNECTION_FIX.md  README.md  SETUP.sh  SUPABASE_MIGRATION_GUIDE.md  UPGRADE_2025_MODELS.md  WEAVIATE_VERSION_SYNC_SUMMARY.md  bun.lockb  deploy_railway_postgres.py  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  final_cleanup_verification.py  fix_type_annotations.py  memories.json  migration_tool.py  package-lock.json  package.json  playwright.config.js  pypi_commands.sh  (+37 more)
.github/ISSUE_TEMPLATE/: verba-issue-template.md
.github/workflows/: ci.yml
.kiro/specs/ai-models-ui-modernization/: design.md  requirements.md  tasks.md
.kiro/specs/astral-tooling-migration/: design.md  requirements.md  tasks.md
.kiro/specs/weaviate-to-postgresql-migration/: design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
.qlty/: qlty.toml
backend-ts/: encore.app  package-lock.json  package.json  tsconfig.json
backend-ts/verba/: admin.ts  api.ts  config.ts  db.ts  documents.ts  encore.service.ts  feedback.ts  query.ts  suggestions.ts  types.ts
backend-ts/verba/migrations/: 001_init.up.sql
backend/app/services/: weaviate_manager.py
frontend/: .gitignore  biome.json  bun.lockb  bunfig.toml  jest.config.js  next.config.js  package-lock.json  package.json  postgres.env  tailwind.config.ts  tsconfig.json  vitest.config.ts
frontend/app/: api.ts  globals.css  layout.tsx  not-found.tsx  page.tsx  providers.tsx  types.ts  util.ts
frontend/app/components/Chat/: ChatConfig.tsx  ChatInterface.tsx  ChatMessage.tsx  ChatView.tsx  ChunkView.tsx  ContentView.tsx  SimpleFeedback.tsx  StatusLabel.tsx
frontend/app/components/Chat/__tests__/: ChatConfig.test.tsx  ChatInterface.test.tsx  ChatMessage.test.tsx  ChatView.test.tsx  ChunkView.test.tsx  ContentView.test.tsx  SimpleFeedback.test.tsx  StatusLabel.test.tsx
frontend/app/components/Document/: ChunkView.tsx  ContentView.tsx  DocumentExplorer.tsx  DocumentMetaView.tsx  DocumentSearch.tsx  DocumentView.tsx  DocumentsView.tsx  VectorView.tsx  util.ts
frontend/app/components/Ingestion/: BasicSettingView.tsx  ComponentView.tsx  ConfigurationView.tsx  FileComponent.tsx  FileSelectionView.tsx  IngestionView.tsx
frontend/app/components/Navigation/: InfoComponent.tsx  NavButton.tsx  NavbarComponent.tsx  StatusMessenger.tsx  UserModal.tsx  VerbaButton.tsx  util.ts
frontend/app/components/Settings/: InfoView.tsx  SettingsComponent.tsx  SettingsView.tsx  SuggestionView.tsx
frontend/app/not-found/: page.tsx
frontend/app/types/: chat.ts
frontend/app/utils/: websocket.ts
frontend/components/chat/: AIChatbot.tsx
frontend/components/ui/: button.tsx  demo.tsx  index.ts  shadcn-example.tsx
frontend/components/ui/__tests__/: shadcn-integration.test.tsx
frontend/lib/: database.types.ts  supabase.ts
frontend/test/: setup.ts  types.ts
frontend/test/next/font/: google.ts
frontend/test/next/font/google/: google.ts
goldenverba/: .coverage  coverage.xml  postgresql_verba_manager.py  requirements.txt  unified_verba_manager.py  verba_manager.py  verba_manager_supabase.py
goldenverba/components/: chunk.py  database_schema.py  database_schema.sql  document.py  interfaces.py  managers.py  postgresql_manager.py  railway_postgres_manager.py  schemas.py  supabase_manager.py  types.py  util.py
goldenverba/components/chunking/: CodeChunker.py  HTMLChunker.py  JSONChunker.py  MarkdownChunker.py  RecursiveChunker.py  SemanticChunker.py  SentenceChunker.py  TokenChunker.py  chunking_examples.py
goldenverba/components/embedding/: CohereEmbedder.py  OllamaEmbedder.py  OpenAIEmbedder.py  SentenceTransformersEmbedder.py  VoyageAIEmbedder.py  WeaviateEmbedder.py  __init__.py
goldenverba/components/generation/: AnthrophicGenerator.py  AnthropicGenerator.py  AnthropicInstructorGenerator.py  CohereGenerator.py  GeminiGenerator.py  LiteLLMGenerator.py  LiteLLMInstructorGenerator.py  OllamaGenerator.py  OpenAIGenerator.py  OpenAIResponsesGenerator.py
goldenverba/components/managers/: lance_manager.py
goldenverba/components/reader/: BasicReader.py  FirecrawlReader.py  GitReader.py  HTMLReader.py  UnstructuredAPI.py
goldenverba/components/retriever/: WindowRetriever.py
goldenverba/server/: api.py  api_supabase.py  cli.py  helpers.py  types.py
goldenverba/tests/: conftest.py  test_chunk.py  test_components.py  test_feedback.py  test_helpers.py  test_interfaces.py  test_types.py  test_util.py  test_verba_manager.py
instructions/: instructions.md
migration/: migrate_weaviate_to_supabase.py
playwright-report/: index.html
scripts/: docker-build.sh  migrate_weaviate_to_postgres.py  railway-postgres-init.sh
supabase/migrations/: 001_create_verba_schema.sql  001_initial_schema.sql
supabase/tests/: 001_schema_tests.sql  001_test_schema.sql  002_test_vector_operations.sql  002_vector_operations_tests.sql
test/: bun-test.d.ts  jest.config.js  setup.ts
test-results/simple_test.js-Basic-Verba-connectivity-test-chromium/: error-context.md  video.webm
