[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "goldenverba"
version = "2.0.0"
description = "Welcome to Verba: The Golden RAGtriever, an open-source initiative designed to offer a streamlined, user-friendly interface for Retrieval-Augmented Generation (RAG) applications. In just a few easy steps, dive into your data and make meaningful interactions!"
readme = "README.md"
requires-python = ">=3.10"
license = "BSD-3-Clause"
authors = [
    { name = "Weaviate", email = "edward@weaviate.io" },
]
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    # Core database dependencies - Pure PostgreSQL with pgvector
    "asyncpg>=0.30.0",
    "pgvector>=0.3.6",
    "psycopg2-binary>=2.9.9",
    "sqlalchemy>=2.0.0",
    # Core web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "gunicorn>=23.0.0",
    "click>=8.1.7",
    # HTTP clients and utilities
    "python-dotenv>=1.0.1",
    "wasabi>=1.1.3",
    "requests>=2.32.0",
    "aiohttp>=3.11.0",
    "httpx>=0.24.0",
    # AI and ML
    "tiktoken>=0.8.0",
    "openai>=1.58.0",
    "anthropic>=0.40.0",
    "litellm>=1.55.0",
    "langchain-text-splitters>=0.3.0",
    "langchain-openai>=0.3.0",
    "langsmith>=0.2.0",
    "instructor>=1.7.0",
    "scikit-learn>=1.6.0",
    "spacy>=3.8.0",
    "numpy>=1.24.0",
    # Document processing
    "pypdf>=5.1.0",
    "python-docx>=1.1.2",
    "markdownify>=0.14.0",
    "assemblyai>=0.35.0",
    "beautifulsoup4>=4.12.3",
    "langdetect>=1.0.9",
    "python-multipart>=0.0.6",
    "aiofiles>=23.0.0",
    "python-magic>=0.4.27",
    "chardet>=5.2.0",
    # Data validation
    "pydantic>=2.10.0",
    "dotenv>=0.9.9",
]

# Dependency groups for uv
[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "ty>=0.0.1a17",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "wheel>=0.45.0",
    "twine>=6.0.0",
    "setuptools>=75.0.0",
]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-postgresql>=6.0.0",
]
google = [
    "google-genai>=0.8.0",
    "google-generativeai>=0.7.0",
]
huggingface = [
    "sentence-transformers>=3.3.0",
    "accelerate>=0.20.0",
    "torch>=2.0.0",
    "transformers>=4.36.0",
]
cohere = [
    "cohere>=5.0.0",
]
document-processing = [
    "unstructured[all-docs]>=0.10.0",
    "firecrawl-py>=0.0.16",
]
migration = [
    "weaviate-client>=4.6.0",
]
mqtt = [
    "asyncio-mqtt>=0.13.0",
]
data-science = [
    "pandas>=2.2.0",
    "aiosqlite>=0.20.0",
]
vector-db = [
    "lancedb>=0.12.0",
]
langchain = [
    "langchain>=0.2.16",
    "langchain-community>=0.2.11",
    "langchain-core>=0.2.39",
]
spacy-models = [
    # Note: These are direct URLs and should be installed separately if needed
    # "en-core-web-lg @ https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.7.1/en_core_web_lg-3.7.1-py3-none-any.whl",
    # "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl",
]
websockets = [
    "websockets>=14.1.0",
]
all = [
    # Google AI
    "google-genai>=0.8.0",
    "google-generativeai>=0.7.0",
    # HuggingFace
    "sentence-transformers>=3.3.0",
    "accelerate>=0.20.0",
    "torch>=2.0.0",
    "transformers>=4.36.0",
    # Other providers
    "cohere>=5.0.0",
    # Document processing
    "unstructured[all-docs]>=0.10.0",
    "firecrawl-py>=0.0.16",
    # Communication
    "asyncio-mqtt>=0.13.0",
    "websockets>=14.1.0",
    # Data science
    "pandas>=2.2.0",
    "aiosqlite>=0.20.0",
    # Vector databases
    "lancedb>=0.12.0",
    # LangChain
    "langchain>=0.2.16",
    "langchain-community>=0.2.11",
    "langchain-core>=0.2.39",
]

[project.scripts]
verba = "goldenverba.server.cli:cli"

[project.urls]
Homepage = "https://github.com/weaviate/Verba"
Repository = "https://github.com/weaviate/Verba"

[tool.hatch.build.targets.wheel]
packages = ["goldenverba"]

# uv configuration
[tool.uv]
# Use dependency groups instead of dev-dependencies for better organization
package = true
# Enable uv's faster resolver and installer
resolution = "highest"

# Comprehensive ruff configuration for linting and formatting
[tool.ruff]
line-length = 88
target-version = "py310"
src = ["goldenverba"]
extend-exclude = [
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".tox",
    ".venv",
    "build",
    "dist",
    "__pycache__",
    "*.egg-info",
]

[tool.ruff.lint]
# Enable comprehensive linting rules
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "PTH", # flake8-use-pathlib
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "B904",  # raise from within except
]
unfixable = ["B"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py
"tests/**/*.py" = ["S101"]  # Allow assert statements in tests

[tool.ruff.lint.isort]
known-first-party = ["goldenverba"]
force-single-line = false
split-on-trailing-comma = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true

# ty type checking configuration
# ty configuration
[tool.ty]
# Source configuration
[tool.ty.src]
include = ["goldenverba"]
exclude = [
    "**/__pycache__/",
    "**/.*",
    "build/",
    "dist/",
]

# Environment configuration
[tool.ty.environment]
python-version = "3.10"
root = ["."]

# Terminal configuration
[tool.ty.terminal]
output-format = "full"
error-on-warning = false

# Rules configuration - start lenient for preview tool
[tool.ty.rules]
# Enable basic type checking rules
possibly-unresolved-reference = "warn"
# Disable rules that might be too strict for preview
division-by-zero = "warn"
